Fix warning icons contrast.

--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1280,3 +1280,13 @@ a.uk-link-muted {
 #change-theme-lp:hover svg {
     fill: #ccc;
 }
+
+// Warning
+
+g#icon-61-warning {
+    fill: #bbb;
+}
+
+.warning-icon, .search-warning-icon {
+    background: url("dark_warning.svg");
+}
